<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout
        android:id="@+id/relativeLayoutDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:id="@+id/txtActividad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtNombre"
            android:layout_below="@+id/txtNombre"
            android:layout_marginTop="27dp"
            android:text="@string/txtActividad"
            android:textAllCaps="false"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/lblDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtActividad"
            android:layout_below="@+id/txtActividad"
            android:layout_marginTop="30dp"
            android:text="@string/lblDireccion"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/txtDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/lblDireccion"
            android:layout_toRightOf="@+id/lblDireccion"
            android:paddingLeft="12dp"    
            android:paddingRight="12dp"         
            android:text="@string/txtDireccion"
            android:textAllCaps="false" />
        
        <TextView
            android:id="@+id/lblTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblDireccion"
            android:layout_below="@+id/txtDireccion"
            android:text="@string/lblTelefono"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/txtTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDireccion"
            android:layout_toRightOf="@+id/lblTelefono"
            android:layout_alignLeft="@+id/txtDireccion"
            android:paddingLeft="12dp"
            android:text="@string/txtTelefono"
            
            android:textAllCaps="false" />

         <TextView
            android:id="@+id/lblWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblTelefono"
            android:layout_below="@+id/txtTelefono"
            android:text="@string/lblWeb" />

        <TextView
            android:id="@+id/txtWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
         	android:layout_below="@+id/txtTelefono"
         	android:layout_alignLeft="@+id/txtDireccion"
            android:layout_alignTop="@+id/lblWeb"
            android:layout_toRightOf="@+id/lblWeb"
            android:paddingLeft="12dp"
            android:text="@string/txtWeb" />
   
        
        <TextView
            android:id="@+id/lblCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblWeb"
            android:layout_below="@+id/txtWeb"           
            android:text="@string/lblCorreo" />

        <TextView
            android:id="@+id/txtCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/lblCorreo"
            android:layout_toRightOf="@+id/lblCorreo"
            android:layout_alignLeft="@+id/txtDireccion"
            android:layout_below="@+id/txtWeb"
            android:paddingLeft="12dp"
            android:text="@string/txtCorreo" />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="37dp"
            android:text="@string/txtNombre"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtHorario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblHorarios"
            android:layout_below="@+id/lblHorarios"
            android:text="@string/txtHorario" />

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="25dp"
            android:textColor="@color/callText"
            android:text="@string/btnLlamar" />

        <TextView
            android:id="@+id/lblHorarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblCorreo"
            android:layout_below="@+id/lblCorreo"
            android:layout_marginTop="28dp"
            android:text="@string/lblHorarios"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtActividad"
            android:layout_toRightOf="@+id/txtActividad"
            android:layout_marginLeft="16dp"
            android:textColor="@color/bannerfondo"
            android:text="@string/verFoto"
            android:textStyle="italic"
             />

        <fragment
            android:id="@+id/fragment1"
            android:name="es.gergonzalezg.tarea2.ComentariosFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtHorario"
            android:layout_above="@+id/button1"
                       />
        
    </RelativeLayout>


