<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PhotoActivity" >

    <ImageView
        android:id="@+id/imageTienda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/imagenTienda"
        android:src="@drawable/shop" />

    <ImageView
        android:id="@+id/imageComentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageTienda"
        android:layout_toLeftOf="@+id/imageTienda"
        android:contentDescription="@string/imagenComentario"
        android:src="@drawable/comentario" />

    <TextView
        android:id="@+id/txtComentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageComentario"
        android:layout_alignLeft="@+id/imageTienda"
        android:text="@string/txtComentario" />

</RelativeLayout>
